--- a/themes/plot-thread.css
+++ b/themes/plot-thread.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
+
 /* container for the whole post */
 .nacho-wrap {
   max-width: 900px;
