--- a/themes/kbr.css
+++ b/themes/kbr.css
@@ -54,7 +54,7 @@
   min-height: 0;
 
   font-family: 'Noto Serif', serif;
-  font-size: 0.95rem;
+  font-size: 14px;
   line-height: 1.55;
   color: #000;
 
