--- a/themes/ms.css
+++ b/themes/ms.css
@@ -13,7 +13,7 @@
 
 .ms-art {
   flex: 0 0 320px;
-  background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/112370296_wWjMgmxVZoTjVFC.png') no-repeat center center;
+  background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/112370296_wWjMgmxVZoTjVFC.png?1766811891') no-repeat center center;
   background-size: cover;
   border-radius: 8px 0 0 8px;
   min-height: 420px;
